# db-designer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  index.html  package.json
.claude/: settings.local.json
.claude/agent-memory/tauri-rust-runner/: MEMORY.md
.claude/agents/: db-designer-dev.md  rust-tauri-developer.md  tauri-rust-runner.md
.clinerules/: proj-rules.md
.cursor/rules/: my-proj-rule.mdc
.github/workflows/: gitee-sync.yml  release.yml
doc/: 功能列表.md  项目结构.md
openspec/changes/add-ai-design-common-prompt/: tasks.md  (+1 more)
scripts/: bump-version.ps1
src/: App.css  App.tsx  data-types.ts  main.tsx
src-tauri/: .env  Cargo.toml  db_designer.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  ai.rs  ai_review.rs  ai_sql.rs  db.rs  db_connection.rs  dialect.rs  git.rs  lib.rs  main.rs  models.rs  project.rs  routine.rs  setting.rs  sync.rs  table.rs  version.rs  window.rs
src-tauri/src/services/: database_connection_service.rs  mod.rs  project_service.rs  routine_service.rs  setting_service.rs  sync_service.rs  table_service.rs  version_service.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/storage/sqlite/: database_connection_store.rs  local_settings_store.rs  mod.rs  project_store.rs  routine_store.rs  setting_store.rs  table_store.rs  version_store.rs
src-tauri/wix/: license.rtf  main.wxs
src/data/: ai-providers.ts
src/i18n/: backend-messages.ts  index.ts
src/store/: theme-context.tsx
src/theme/: dark-colors.ts
src/types/: index.ts
(+108 files in other folders)
